apps/common/flux/nats/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nats-isolated
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nats
      app.kubernetes.io/instance: nats
      app.kubernetes.io/component: nats
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: geometa
            app.kubernetes.io/name: nats
            app.kubernetes.io/instance: nats
            app.kubernetes.io/component: nats
      toPorts:
        - ports:
            - port: "6222"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: geometa
            app.kubernetes.io/name: nats-smoke
      toPorts:
        - ports:
            - port: "4222"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8222"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: geometa
            app.kubernetes.io/name: nats
            app.kubernetes.io/instance: nats
            app.kubernetes.io/component: nats
      toPorts:
        - ports:
            - port: "6222"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nats-smoke-isolated
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nats-smoke
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: geometa
            app.kubernetes.io/name: nats
            app.kubernetes.io/instance: nats
            app.kubernetes.io/component: nats
      toPorts:
        - ports:
            - port: "4222"
              protocol: TCP
